--- a/html/index.html
+++ b/html/index.html
@@ -209,9 +209,170 @@
             </div>
         </div>
     </section>
+    <section class="about">
+        <div class="container">
+            <div class="clouds">
+                <div class="row">
+                    <div class="col">
+                        <p class="about__description">
+                            ABOUT US
+                        </p>
+                        <h2 class="about__title">
+                            Read about our app
+                        </h2>
+                    </div>
+                </div>
+                <ul class="row justify-content-center about__list">
+                    <li class="col-xl-2 col-md-3 col-sm-6 about__item">
+                        <p class="about__icon">
+                            <svg width="18" height="21" viewBox="0 0 18 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M2 7.87273V19H6.42105L9 17L11.5789 19H16V7.87273L9 2L2 7.87273Z" stroke="#4074F8" stroke-width="2.5"/>
+                            </svg>
+                        </p>
+                        <p class="about__choice">Overview</p>
+                        <p class="about__text">
+                            Brute laoreet efficiendi id his, ea illum nonumes luptatum pro.
+                        </p>
+                    </li>
+                    <li class="col-xl-2 col-md-3 col-sm-6 about__item">
+                        <p class="about__icon">
+                            <svg width="28" height="18" viewBox="0 0 28 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M19.7544 16H12.0877H9.19945H2V5.94956V2H12.0877L13.7018 5.16129H19.7544V6.96774M19.7544 16L25 6.96774H19.7544M19.7544 16V6.96774" stroke="#4074F8" stroke-width="2.5"/>
+                            </svg>
+                        </p>
+                        <p class="about__choice">Files</p>
+                        <p class="about__text">
+                            No vim nulla vitae intellegat. Ei enim error ius, solet atomorum conceptam ex has.
+                        </p>
+                    </li>
+                    <li class="col-xl-2 col-md-3 col-sm-6 about__item">
+                        <p class="about__icon">
+                            <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M2 2V6.94956V13.5H4.28115L5.5 17L9 13.5H13.7018H19.7544V7.96774V2H17H12.5H2Z" stroke="#4074F8" stroke-width="2.5"/>
+                            </svg>
+                        </p>
+                        <p class="about__choice">Meeting chats</p>
+                        <p class="about__text">
+                            Vim ne tacimates neglegentur. Erat diceret omittam at est.
+                        </p>
+                    </li>
+                    <li class="col-xl-2 col-md-3 col-sm-6 about__item">
+                        <p class="about__icon">
+
+                            <svg width="21" height="19" viewBox="0 0 21 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M2 11.9677V17.5H4.28115H9H13.7018H19.2544V11.9677M6.75439 5L10.7544 2M14.7544 5L10.7544 2M10.7544 2V12.5" stroke="#4074F8" stroke-width="2.5"/>
+                            </svg>
+                        </p>
+                        <p class="about__choice">Save events</p>
+                        <p class="about__text">
+                            Nisl idque mel ea, nominati voluptatum.
+                        </p>
+                    </li>
+                </ul>
+                <div class="about__button">
+                    <a href="#" class="about__read">Read more</a>
+                    <p class="about__or">
+                        <svg width="15" height="1" viewBox="0 0 15 1" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <line y1="0.5" x2="15" y2="0.5" stroke="#DAE4FE"/>
+                        </svg>
+                        <span>OR</span>
+                        <svg width="15" height="1" viewBox="0 0 15 1" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <line y1="0.5" x2="15" y2="0.5" stroke="#DAE4FE"/>
+                        </svg>
+                    </p>
+                    <a href="#" class="about__get">Get started</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="analytics">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 analytics__productivity">
+                    <div class="analytics__icon">
+                        <svg width="67" height="68" viewBox="0 0 67 68" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M2 33.625C2 16.159 16.2412 2 33.8085 2C37.0463 2 40.1712 2.48098 43.1147 3.375" stroke="white" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M26.9628 40.4307C30.7436 44.1895 36.873 44.1895 40.6537 40.4307C44.4343 36.6719 60.0847 10.2499 58.7018 8.87494C57.3188 7.49994 30.7436 23.0602 26.9628 26.819C23.1823 30.5778 23.1823 36.6719 26.9628 40.4307ZM33.808 36.3751C35.3356 36.3751 36.5742 35.1439 36.5742 33.6251C36.5742 32.1063 35.3356 30.8751 33.808 30.8751C32.2805 30.8751 31.0422 32.1063 31.0422 33.6251C31.0422 35.1439 32.2805 36.3751 33.808 36.3751Z" fill="white"/>
+                            <ellipse cx="6.14901" cy="50.125" rx="2.76596" ry="2.75" fill="white"/>
+                            <ellipse cx="17.2127" cy="61.125" rx="2.76596" ry="2.75" fill="white"/>
+                            <ellipse cx="33.8084" cy="65.25" rx="2.76596" ry="2.75" fill="white"/>
+                            <ellipse cx="50.4041" cy="61.125" rx="2.76596" ry="2.75" fill="white"/>
+                            <ellipse cx="60.085" cy="50.125" rx="2.76596" ry="2.75" fill="white"/>
+                            <ellipse cx="64.234" cy="33.625" rx="2.76596" ry="2.75" fill="white"/>
+                        </svg>
+                    </div>
+                    <p class="analytics__amount productivity-amount">89%</p>
+                    <p class="analytics__text productivity-text">
+                        Customers who have increased their productivity
+                    </p>
+                </div>
+                <div class="col-sm-6 analytics__users">
+                    <div class="analytics__icon">
+                        <svg width="75" height="66" viewBox="0 0 75 66" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <ellipse cx="28.6252" cy="17.5" rx="15.6369" ry="15.5" stroke="#5E80FF" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M55.2501 64.0001C55.2501 49.6556 43.3296 38.0271 28.625 38.0271C13.9204 38.0271 2 49.6556 2 64.0001" stroke="#5E80FF" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+                            <ellipse cx="62.0117" cy="20.2229" rx="6.45334" ry="6.49324" stroke="#5E80FF" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M72.9999 39.7027C72.9999 33.6935 68.0804 28.8221 62.0118 28.8221C55.9432 28.8221 51.0237 33.6935 51.0237 39.7027" stroke="#5E80FF" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                    <p class="analytics__amount users-amount">3123</p>
+                    <p class="analytics__text users-text">
+                        Users who have used our application
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 
-<footer></footer>
+<footer class="footer">
+    <nav class="navbar navbar-expand-md navbar-light header-navbar">
+        <div class="container flex-wrap">
+            <a class="navbar-brand" href="#"></a>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup_footer">
+                <div class="navbar-nav menu-page">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="#">Blog</a>
+                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">Documentation</a>
+                </div>
+            </div>
+            <div class="collapse navbar-collapse menu-right" id="navbarNavAltMarkup1_footer">
+                <div class="navbar-nav menu-icon">
+                    <a class="nav-link" href="#">
+                        <svg width="9" height="17" viewBox="0 0 9 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M5.65597 17V9.24548H8.22501L8.60969 6.2234H5.65597V4.294C5.65597 3.41904 5.89578 2.82278 7.13417 2.82278L8.71368 2.82208V0.119112C8.44051 0.0822826 7.5029 -1.65981e-08 6.41206 -1.65981e-08C4.13475 -1.65981e-08 2.57564 1.40836 2.57564 3.9947V6.2234H-2.3404e-08V9.24548H2.57564V17H5.65597Z" fill="currentColor"/>
+                        </svg>
+                    </a>
+                    <a class="nav-link" href="#">
+                        <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M5.81972 12.0232C5.38191 12.0232 5.4563 11.8651 5.3053 11.4664L4.01782 7.41344L13.9283 1.78983" fill="currentColor"/>
+                            <path d="M5.81982 12.0232C6.15768 12.0232 6.30696 11.8754 6.49554 11.7L8.29744 10.0241L6.04979 8.72772" fill="#70788E"/>
+                            <path d="M6.04945 8.72806L11.4957 12.5768C12.1172 12.9048 12.5657 12.735 12.7205 12.0249L14.9374 2.03246C15.1644 1.16206 14.5906 0.76729 13.996 1.02547L0.978404 5.82666C0.0898302 6.16756 0.0950105 6.64173 0.816436 6.85301L4.15705 7.85032L11.8909 3.18335C12.256 2.97158 12.5911 3.08543 12.3161 3.31891" fill="currentColor"/>
+                        </svg>
+                    </a>
+                    <a class="nav-link" href="#">
+                        <svg width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M17.0328 1.84041C16.4253 2.11761 15.7726 2.30417 15.0877 2.38898C15.7868 1.95807 16.3239 1.27594 16.5767 0.46342C15.9222 0.862259 15.1973 1.15191 14.4257 1.308C13.8081 0.631966 12.9276 0.210602 11.9535 0.210602C10.0832 0.210602 8.56631 1.76885 8.56631 3.69017C8.56631 3.96313 8.59598 4.22867 8.65402 4.48334C5.83853 4.33759 3.3424 2.95159 1.67204 0.847419C1.38053 1.36154 1.2135 1.95887 1.2135 2.59648C1.2135 3.80359 1.81147 4.86853 2.72005 5.49303C2.16541 5.47448 1.64276 5.31812 1.18615 5.05709V5.10081C1.18615 6.7876 2.35476 8.19347 3.90258 8.51347C3.61882 8.59297 3.31957 8.63537 3.01181 8.63537C2.79357 8.63537 2.581 8.61417 2.37462 8.57309C2.80543 9.95591 4.05659 10.9619 5.53864 10.99C4.37931 11.9228 2.91868 12.4793 1.33113 12.4793C1.05768 12.4793 0.788618 12.4634 0.523682 12.4308C2.02249 13.4183 3.80327 13.9944 5.71599 13.9944C11.946 13.9944 15.3531 8.69155 15.3531 4.09365C15.3531 3.94259 15.3498 3.79286 15.3433 3.64313C16.0053 3.15286 16.5798 2.53937 17.0338 1.84107" fill="currentColor"/>
+                        </svg>
+                    </a>
+                    <a class="nav-link" href="#">
+                        <svg width="17" height="14" viewBox="0 0 17 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M17.0001 2.10651H16.3472C16.1047 2.10651 15.7619 2.45072 15.7619 2.67109V10.6583C15.7619 10.8789 16.1047 11.1796 16.3472 11.1796H17.0001V13.0755H11.084V11.1796H12.3223V2.78361H12.2616L9.36999 13.0755H7.13129L4.277 2.78361H4.20477V11.1796H5.44303V13.0755H0.48999V11.1796H1.12422C1.38542 11.1796 1.72825 10.8789 1.72825 10.6583V2.67109C1.72825 2.45072 1.38542 2.10651 1.12422 2.10651H0.48999V0.210635H6.68355L8.717 7.65872H8.77295L10.8252 0.210635H17.0001V2.10651Z" fill="currentColor"/>
+                        </svg>
+                    </a>
+                    <a class="nav-link menu-button" href="#">Get started</a>
+                </div>
+            </div>
+            <div class="row w-100">
+                <p class="footer__info">
+                    Copyright © 2018 by Random site
+                </p>
+            </div>
+        </div>
+    </nav>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
 </script>
