add plan and singUp block

--- a/html/index.html
+++ b/html/index.html
@@ -472,7 +472,7 @@
                             <div class="carousel-item active">
                                 <div class="customers__card d-block w-80">
                                     <div class="carousel-caption">
-                                        <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                                        <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
                                             <img src="/assets/img/card1.png" alt="card1">
@@ -483,7 +483,7 @@
                             <div class="carousel-item">
                                 <div class="customers__card d-block w-80">
                                     <div class="carousel-caption">
-                                        <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                                        <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
                                             <img src="/assets/img/card1.png" alt="card1">
@@ -494,7 +494,7 @@
                             <div class="carousel-item">
                                 <div class="customers__card d-block w-80">
                                     <div class="carousel-caption">
-                                        <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                                        <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
                                             <img src="/assets/img/card1.png" alt="card1">
@@ -505,7 +505,7 @@
                             <div class="carousel-item">
                                 <div class="customers__card d-block w-80">
                                     <div class="carousel-caption">
-                                        <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                                        <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
                                             <img src="/assets/img/card1.png" alt="card1">
@@ -516,7 +516,7 @@
                             <div class="carousel-item">
                                 <div class="customers__card d-block w-80">
                                     <div class="carousel-caption">
-                                        <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                                        <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
                                             <img src="/assets/img/card1.png" alt="card1">
@@ -527,7 +527,7 @@
                             <div class="carousel-item">
                                 <div class="customers__card d-block w-80">
                                     <div class="carousel-caption">
-                                        <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                                        <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
                                             <img src="/assets/img/card1.png" alt="card1">
@@ -538,7 +538,7 @@
                             <div class="carousel-item">
                                 <div class="customers__card d-block w-80">
                                     <div class="carousel-caption">
-                                        <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                                        <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
                                             <img src="/assets/img/card1.png" alt="card1">
@@ -549,7 +549,7 @@
                             <div class="carousel-item">
                                 <div class="customers__card d-block w-80">
                                     <div class="carousel-caption">
-                                        <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                                        <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
                                             <img src="/assets/img/card1.png" alt="card1">
@@ -560,7 +560,7 @@
                             <div class="carousel-item">
                                 <div class="customers__card d-block w-80">
                                     <div class="carousel-caption">
-                                        <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                                        <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
                                             <img src="/assets/img/card1.png" alt="card1">
@@ -681,6 +681,57 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="plan">
+        <div class="plan__clouds">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-xl-8 col-lg-10">
+                        <p class="plan__description">
+                            PLAN YOUR LIFE
+                        </p>
+                        <h2 class="plan__title">
+                            Get <span>started</span> now
+                        </h2>
+                        <p class="plan__text">
+                            Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.
+                        </p>
+                        <div class="plan__button">
+                            <a class="plan__view" href="#">View pricing</a>
+                            <a class="plan__read" href="#">Read documentation</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="singUp">
+        <div class="container">
+            <div class="row justify-content-end">
+                <div class="col-md-5 col-lg-4 singUp__info">
+                    <h2 class="singUp__title">
+                        Sign up for newsletter
+                    </h2>
+                    <p class="singUp__text">
+                        Cu qui soleat partiendo urbanitas. Eum aperiri indoctum eu, homero alterum.
+                    </p>
+                </div>
+                <form class="col-md-6">
+                    <div class="row">
+                        <div class="col-sm-7 singUp__form">
+                            <label>
+                                <input class="singUp__input" type="email" name="email" placeholder="Email address">
+                            </label>
+                        </div>
+                        <div class="col-sm-4">
+                            <button class="singUp__button" type="submit">
+                                Save me
+                            </button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </section>
