--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,10 @@
           rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="stylesheet" href="../js/WOW-1.1.2/css/libs/animate.css">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css"
+          integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
+          crossorigin="anonymous">
     <title>Clean and Simple</title>
 </head>
 <body>
@@ -477,7 +480,7 @@
                                         <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
-                                            <img src="/assets/img/card1.png" alt="card1">
+                                            <img src="../assets/img/card1.png" alt="card1">
                                         </div>
                                     </div>
                                 </div>
@@ -488,7 +491,7 @@
                                         <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
-                                            <img src="/assets/img/card1.png" alt="card1">
+                                            <img src="../assets/img/card1.png" alt="card1">
                                         </div>
                                     </div>
                                 </div>
@@ -499,7 +502,7 @@
                                         <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
-                                            <img src="/assets/img/card1.png" alt="card1">
+                                            <img src="../assets/img/card1.png" alt="card1">
                                         </div>
                                     </div>
                                 </div>
@@ -510,7 +513,7 @@
                                         <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
-                                            <img src="/assets/img/card1.png" alt="card1">
+                                            <img src="../assets/img/card1.png" alt="card1">
                                         </div>
                                     </div>
                                 </div>
@@ -521,7 +524,7 @@
                                         <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
-                                            <img src="/assets/img/card1.png" alt="card1">
+                                            <img src="../assets/img/card1.png" alt="card1">
                                         </div>
                                     </div>
                                 </div>
@@ -532,7 +535,7 @@
                                         <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
-                                            <img src="/assets/img/card1.png" alt="card1">
+                                            <img src="../assets/img/card1.png" alt="card1">
                                         </div>
                                     </div>
                                 </div>
@@ -543,7 +546,7 @@
                                         <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
-                                            <img src="/assets/img/card1.png" alt="card1">
+                                            <img src="../assets/img/card1.png" alt="card1">
                                         </div>
                                     </div>
                                 </div>
@@ -554,7 +557,7 @@
                                         <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
-                                            <img src="/assets/img/card1.png" alt="card1">
+                                            <img src="../assets/img/card1.png" alt="card1">
                                         </div>
                                     </div>
                                 </div>
@@ -565,7 +568,7 @@
                                         <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
-                                            <img src="/assets/img/card1.png" alt="card1">
+                                            <img src="../assets/img/card1.png" alt="card1">
                                         </div>
                                     </div>
                                 </div>
@@ -788,10 +791,9 @@
     </nav>
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
-</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 <script src="../js/script.js"></script>
-<script src="../js/WOW-1.1.2/dist/wow.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 <script>
     new WOW().init();
 </script>
