--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;600&family=Quicksand:wght@300;400;500;700&family=Roboto:wght@400;500&display=swap"
           rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css"
           integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div class="banner__gradient d-none d-md-block">
-                    <img alt="" src="../assets/img/gradient.png">
+                    <img alt="" src="assets/img/gradient.png">
                     <div class="banner__svg_points">
                         <div class="svg_circle one"></div>
                         <div class="svg_circle two"></div>
@@ -221,7 +221,7 @@
                 <div class="col-xl-7 col-lg-7 col-xs-12">
                     <div class="app__img wow bounceInUp">
                         <div class="img-block">
-                            <img src="../assets/img/illustration.png" alt="illustration">
+                            <img src="assets/img/illustration.png" alt="illustration">
                         </div>
                     </div>
                 </div>
@@ -373,14 +373,14 @@
                                     <div class="row blog__card">
                                         <div class="col blog__img">
                                             <div class="blog__left_img">
-                                                <img src="../assets/img/photo1.png" alt="photo1">
+                                                <img src="assets/img/photo1.png" alt="photo1">
                                             </div>
                                             <div class="blog__right_img">
                                                 <div class="first_child_img">
-                                                    <img src="../assets/img/photo2.png" alt="photo2">
+                                                    <img src="assets/img/photo2.png" alt="photo2">
                                                 </div>
                                                 <div class="second_child_img">
-                                                    <img src="../assets/img/photo3.png" alt="photo3">
+                                                    <img src="assets/img/photo3.png" alt="photo3">
                                                 </div>
                                             </div>
                                         </div>
@@ -405,14 +405,14 @@
                                     <div class="row blog__card">
                                         <div class="col blog__img">
                                             <div class="blog__left_img">
-                                                <img src="../assets/img/photo1.png" alt="photo1">
+                                                <img src="assets/img/photo1.png" alt="photo1">
                                             </div>
                                             <div class="blog__right_img">
                                                 <div class="first_child_img">
-                                                    <img src="../assets/img/photo2.png" alt="photo2">
+                                                    <img src="assets/img/photo2.png" alt="photo2">
                                                 </div>
                                                 <div class="second_child_img">
-                                                    <img src="../assets/img/photo3.png" alt="photo3">
+                                                    <img src="assets/img/photo3.png" alt="photo3">
                                                 </div>
                                             </div>
                                         </div>
@@ -437,14 +437,14 @@
                                     <div class="row blog__card">
                                         <div class="col blog__img">
                                             <div class="blog__left_img">
-                                                <img src="../assets/img/photo1.png" alt="photo1">
+                                                <img src="assets/img/photo1.png" alt="photo1">
                                             </div>
                                             <div class="blog__right_img">
                                                 <div class="first_child_img">
-                                                    <img src="../assets/img/photo2.png" alt="photo2">
+                                                    <img src="assets/img/photo2.png" alt="photo2">
                                                 </div>
                                                 <div class="second_child_img">
-                                                    <img src="../assets/img/photo3.png" alt="photo3">
+                                                    <img src="assets/img/photo3.png" alt="photo3">
                                                 </div>
                                             </div>
                                         </div>
@@ -511,7 +511,7 @@
                                         <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
-                                            <img src="../assets/img/card1.png" alt="card1">
+                                            <img src="assets/img/card1.png" alt="card1">
                                         </div>
                                     </div>
                                 </div>
@@ -522,7 +522,7 @@
                                         <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
-                                            <img src="../assets/img/card1.png" alt="card1">
+                                            <img src="assets/img/card1.png" alt="card1">
                                         </div>
                                     </div>
                                 </div>
@@ -533,7 +533,7 @@
                                         <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
-                                            <img src="../assets/img/card1.png" alt="card1">
+                                            <img src="assets/img/card1.png" alt="card1">
                                         </div>
                                     </div>
                                 </div>
@@ -544,7 +544,7 @@
                                         <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
-                                            <img src="../assets/img/card1.png" alt="card1">
+                                            <img src="assets/img/card1.png" alt="card1">
                                         </div>
                                     </div>
                                 </div>
@@ -555,7 +555,7 @@
                                         <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
-                                            <img src="../assets/img/card1.png" alt="card1">
+                                            <img src="assets/img/card1.png" alt="card1">
                                         </div>
                                     </div>
                                 </div>
@@ -566,7 +566,7 @@
                                         <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
-                                            <img src="../assets/img/card1.png" alt="card1">
+                                            <img src="assets/img/card1.png" alt="card1">
                                         </div>
                                     </div>
                                 </div>
@@ -577,7 +577,7 @@
                                         <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
-                                            <img src="../assets/img/card1.png" alt="card1">
+                                            <img src="assets/img/card1.png" alt="card1">
                                         </div>
                                     </div>
                                 </div>
@@ -588,7 +588,7 @@
                                         <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
-                                            <img src="../assets/img/card1.png" alt="card1">
+                                            <img src="assets/img/card1.png" alt="card1">
                                         </div>
                                     </div>
                                 </div>
@@ -599,7 +599,7 @@
                                         <p class="customers__card-text">Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                                         </p>
                                         <div class="customers__img">
-                                            <img src="../assets/img/card1.png" alt="card1">
+                                            <img src="assets/img/card1.png" alt="card1">
                                         </div>
                                     </div>
                                 </div>
@@ -832,7 +832,7 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-<script src="../js/script.js"></script>
+<script src="js/script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 <script>
     new WOW().init();
